# KLM

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  appicon.rc  dupefinderat.cpp  dupefinderat.h  dupefindercrc.cpp  dupefindercrc.h  dupefindersid.cpp  dupefindersid.h  images.qrc  karaokefile.cpp  karaokefile.h  karaokefileinfo.cpp  karaokefileinfo.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mzarchive.cpp  mzarchive.h  okarchive.cpp  qcrc32.cpp  qcrc32.h  tablemodelpaths.cpp  tablemodelpaths.h  taglib_config.h  tagreader.cpp  tagreader.h  vcpkg.json
.github/workflows/: cmake.yml  update-linux-build-files.yml  windows-32bit-build.yml  windows-64bit-build.yml  windows-build.yml
icons/: appicon.rc
linux/: klm.desktop
rpm/: klm.spec
windows/: klm-x86.iss  klm-x86_64.iss
